support transform if statement

--- a/test/lang/__snapshots__/parser.test.ts.yml
+++ b/test/lang/__snapshots__/parser.test.ts.yml
@@ -950,6 +950,260 @@ Tools / simple syntax / ast / 0: |-
           ]
         },
         {
+          "if_block": [
+            {
+              "left": {
+                "left": {
+                  "left": {
+                    "token": {
+                      "type": "ID",
+                      "value": "a"
+                    },
+                    "value": "a"
+                  },
+                  "op": {
+                    "type": ">",
+                    "value": ">"
+                  },
+                  "right": {
+                    "token": {
+                      "type": "NUMBER",
+                      "value": 0
+                    },
+                    "value": 0
+                  }
+                },
+                "op": {
+                  "type": "and",
+                  "value": "and"
+                },
+                "right": {
+                  "left": {
+                    "token": {
+                      "type": "ID",
+                      "value": "b"
+                    },
+                    "value": "b"
+                  },
+                  "op": {
+                    "type": ">",
+                    "value": ">"
+                  },
+                  "right": {
+                    "token": {
+                      "type": "NUMBER",
+                      "value": 0
+                    },
+                    "value": 0
+                  }
+                }
+              },
+              "op": {
+                "type": "and",
+                "value": "and"
+              },
+              "right": {
+                "left": {
+                  "token": {
+                    "type": "ID",
+                    "value": "c"
+                  },
+                  "value": "c"
+                },
+                "op": {
+                  "type": ">",
+                  "value": ">"
+                },
+                "right": {
+                  "token": {
+                    "type": "NUMBER",
+                    "value": 0
+                  },
+                  "value": 0
+                }
+              }
+            },
+            {
+              "statement_list": [
+                {
+                  "type": "@log",
+                  "expr": {
+                    "token": {
+                      "type": "STRING",
+                      "value": "The numbers are greater than 0"
+                    },
+                    "value": "The numbers are greater than 0"
+                  }
+                },
+                {}
+              ],
+              "style_list": [
+                {}
+              ]
+            }
+          ],
+          "else_block": {
+            "statement_list": [
+              {
+                "type": "@log",
+                "expr": {
+                  "token": {
+                    "type": "STRING",
+                    "value": "Atleast one number is not greater than 0"
+                  },
+                  "value": "Atleast one number is not greater than 0"
+                }
+              },
+              {}
+            ],
+            "style_list": [
+              {}
+            ]
+          }
+        },
+        {
+          "if_block": [
+            {
+              "left": {
+                "token": {
+                  "type": "ID",
+                  "value": "a"
+                },
+                "value": "a"
+              },
+              "op": {
+                "type": ">",
+                "value": ">"
+              },
+              "right": {
+                "token": {
+                  "type": "NUMBER",
+                  "value": 0
+                },
+                "value": 0
+              }
+            },
+            {
+              "statement_list": [
+                {
+                  "type": "@log",
+                  "expr": {
+                    "token": {
+                      "type": "STRING",
+                      "value": "a"
+                    },
+                    "value": "a"
+                  }
+                },
+                {}
+              ],
+              "style_list": [
+                {}
+              ]
+            }
+          ],
+          "elif_blocks": [
+            [
+              {
+                "left": {
+                  "token": {
+                    "type": "ID",
+                    "value": "b"
+                  },
+                  "value": "b"
+                },
+                "op": {
+                  "type": ">",
+                  "value": ">"
+                },
+                "right": {
+                  "token": {
+                    "type": "NUMBER",
+                    "value": 0
+                  },
+                  "value": 0
+                }
+              },
+              {
+                "statement_list": [
+                  {
+                    "type": "@log",
+                    "expr": {
+                      "token": {
+                        "type": "STRING",
+                        "value": "b"
+                      },
+                      "value": "b"
+                    }
+                  },
+                  {}
+                ],
+                "style_list": [
+                  {}
+                ]
+              }
+            ],
+            [
+              {
+                "left": {
+                  "token": {
+                    "type": "ID",
+                    "value": "c"
+                  },
+                  "value": "c"
+                },
+                "op": {
+                  "type": ">",
+                  "value": ">"
+                },
+                "right": {
+                  "token": {
+                    "type": "NUMBER",
+                    "value": 0
+                  },
+                  "value": 0
+                }
+              },
+              {
+                "statement_list": [
+                  {
+                    "type": "@log",
+                    "expr": {
+                      "token": {
+                        "type": "STRING",
+                        "value": "c"
+                      },
+                      "value": "c"
+                    }
+                  },
+                  {}
+                ],
+                "style_list": [
+                  {}
+                ]
+              }
+            ]
+          ],
+          "else_block": {
+            "statement_list": [
+              {
+                "type": "@log",
+                "expr": {
+                  "token": {
+                    "type": "STRING",
+                    "value": "unknown"
+                  },
+                  "value": "unknown"
+                }
+              },
+              {}
+            ],
+            "style_list": [
+              {}
+            ]
+          }
+        },
+        {
           "type": "@warn",
           "expr": {
             "left": {
