--- a/test/lang/__snapshots__/transformer.test.ts.yml
+++ b/test/lang/__snapshots__/transformer.test.ts.yml
@@ -125,6 +125,9 @@ Tools / simple syntax / js / 0: |-
   console.log(d);
   console.log(b);
   console.warn(__add__(a, 12));
+  __interpret__("bg-red-500 text-white sm:bg-gray-200");
+  __attributify__("bg", "red-500 opacity-50 sm:red-200");
+  __attributify__("sm:text", "red-500 opacity-30");
 
           import { eval, rgba, get, set } from 'windi/lang';
 
@@ -141,6 +144,7 @@ Tools / simple syntax / js / 0: |-
   style.add(new Property("color", "red"));
   style.add((() => {
   const style = new Style(".abc .def");
+  __interpret__("font-bold text-lg");
   style.add(new Property("color", `${d}`));
   return style;
   })());
