--- a/test/plugin/typography/src/lib/Markdown.mdx
+++ b/test/plugin/typography/src/lib/Markdown.mdx
@@ -1,4 +1,4 @@
-<p className="lead">
+<p class="lead">
   Until now, trying to style an article, document, or blog post with Tailwind has been a tedious
   task that required a keen eye for typography and a lot of complex custom CSS.
 </p>
